--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,6 @@ body {
     background-color: rgba(24, 37, 46, 0.75);
     margin-top: 0;
     padding: 1%;
-    margin-bottom: 3%;
 }
 .separator-title {
     margin-bottom: 0;
@@ -58,9 +57,9 @@ body {
 }
 .separator-div {
     /*background-color: rgba(141, 189, 69, 0.5);*/
-    background-color: rgba(90, 195, 152, 0.5);
+    /*background-color: rgba(90, 195, 152, 0.5);*/
     /*background-color: rgba(234, 230, 247, 0.5);*/
-    padding: 5%;
+    padding: 1%;
 }
 .thumbnail-div {
     background-color: transparent;
