--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,57 +73,83 @@ body {
 
 /*Navbar*/
 
+
+
 .navbar {
     border: none;
     -webkit-border-radius:0;
     -moz-border-radius:0;
     border-radius:0;
     background-color: #18252e;
-    height: 70px;
+}
+.dropdown-menu {
+    background-color: #18252e;
+    border: none;
+    border-radius: 0;
 }
 .navbar-brand {
     max-height: 100%;
-    -o-object-fit: contain;
-    object-fit: contain;
     height:80%;
     padding-left: 20px !important;
     padding-top: 10px !important;
 
-}
-.navbar-dropdown {
-    background-color: #18252e;
-    border: none;
-    border-radius: 0;
 }
 .navbar-burger {
     border: none;
     position: relative;
     top:10px;
 }
-.navbar-menu {
-    border-top: none;
-    position: relative;
-    top:10px;
+.navbar-toggle {
+    border: none;
 }
-.navbar-list > li:hover {
+.navbar-collapse{
+    border-top: none;
+}
+.navbar-nav > li:hover {
     background-color: white;
 }
-.navbar-list > li > a {
-    color: white!important;
+.navbar-nav > li > a {
+    position: relative;
+    top:10px;
     font-size: 20px;
+    color: white!important;
 }
-.navbar-list > li > a:hover {
+.navbar-nav > li > a:hover {
     color: #18252e!important;
 }
 .dropdown-menu > li > a {
     color: white!important;
 }
-.navbar-dropdown > li > a:hover {
+.dropdown-menu > li > a:hover {
     background-color: white;
     color: #18252e!important;
 }
 
-
+@media (max-width: 1110px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
 /*Fin Navbar */
 /**************Page Artiste**************/
 
