--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,16 +26,25 @@ body {
 .font-dokyo {
     font-family: 'Dokyo', sans-serif;
 }
-.font-default {
+* {
     font-family: 'Roboto', sans-serif;
 }
 .content-div {
     background-color: white;
     border: 3px solid rgba(237, 122, 33, 1);        /* bordure orange */
+    border-radius: 20px;
     padding: 2.5%;
 }
 .hr {
-    border: 1px solid rgba(90, 195, 152, 1);
+    border: 1px solid rgba(237, 122, 33, 1)
+}
+.hr-min {
+    border: 1px solid rgba(237, 122, 33, 1);
+    width: 50%;
+    padding: 0!important;
+    margin: 2.5%!important;
+    margin-left: auto!important;
+    margin-right: auto!important;
 }
 .header-div {
     color: white;
@@ -105,7 +114,10 @@ body {
     border-top: none;
 }
 .navbar-nav > li:hover {
-    background-color: white;
+    background-color: transparent;
+}
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    color: #ed7a21!important;
 }
 .navbar-nav > li > a {
     position: relative;
@@ -113,15 +125,15 @@ body {
     font-size: 20px;
     color: white!important;
 }
-.navbar-nav > li > a:hover {
-    color: #18252e!important;
+.navbar-nav > li > a:focus {
+    background-color: transparent!important;
 }
 .dropdown-menu > li > a {
     color: white!important;
 }
 .dropdown-menu > li > a:hover {
-    background-color: white;
-    color: #18252e!important;
+    background-color: transparent;
+    color: #ed7a21!important;
 }
 
 @media (max-width: 1110px) {
@@ -170,7 +182,11 @@ body {
 /*Accueil*/
 
 .news-title {
-    color: rgb(90, 195, 152);
+    color: rgba(237, 122, 33, 1);
+}
+.logo-big {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*Fin Accueil*/
@@ -179,20 +195,22 @@ body {
 
 .footer {
     margin-top: 5%;
+    background-color: #18252e;
+    padding-top: 5%;
 }
 .footer-top {
-    background-color: rgba(24, 37, 46, 1);
+    padding: 1%;
 }
 .footer-bottom {
-    background-color: rgba(90, 195, 152, 1);
     padding: 1%;
 }
 .footer-legal {
     color: white;
 }
 .footer-sponsor {
-    max-width: 100px;
-    max-height: 100px;
+    width: 100px;
+    height: 100px;
+    margin: 5%;
 }
 .footer-social {
     width: 50px;
@@ -251,33 +269,19 @@ body {
     box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
 }
 .prog-info {
-    /*background-color: rgba(90, 195, 152, 1);        !*couleur fond bleu cyan*!*/
-    background-color: rgba(24, 37, 46, 1);      /*couleur fond bleu foncé*/
     width:180px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     top: -20px;
-    height:50px;
-    color: #ffffff;
-    /*border: 3px solid rgba(90, 195, 152, 1);       !* bordure cyan *!*/
-    border: 1px solid rgba(237, 122, 33, 1);        /* bordure orange */
-    /*border: 3px solid rgba(24, 37, 46, 1); */         /* bordure bleu foncé */
-    /*border: 3px solid rgba(141, 189, 69, 1);          !* bordure vert clair *!*/
-    /*box-shadow: -1px 2px 10px 3px rgba(0, 0, 0, 0.3) inset;*/
     box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);        /*Ombre autour du layout artiste*/
-
+    color: black;
+    font-size: 14px;
 }
-.prog-name {
-    font-size: 1.5em;
-    font-family: 'Dokyo', sans-serif;
-
+.info-text {
+    margin: 0!important;
+    padding: 0!important;
 }
-.prog-tag {
-    position: relative;
-    top: -16px;
-}
-
 .prog-filter a:hover {
     color: rgba(90, 195, 152, 1);       /* Hover cyan */
     /*color: rgba(237, 122, 33, 1);       !* Hover orange *!*/
