--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,24 +28,28 @@ body {
 }
 * {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 .content-div {
-    background-color: white;
-    border: 3px solid rgba(237, 122, 33, 1);        /* bordure orange */
-    border-radius: 20px;
-    padding: 2.5%;
+    background-color: transparent;
+    color: white;
+}
+.content-img {
 }
 .hr {
-    border: 1px solid rgba(237, 122, 33, 1)
+    border: 2.5px solid rgba(237, 122, 33, 1);
 }
 .hr-min {
-    border: 1px solid rgba(237, 122, 33, 1);
-    width: 50%;
-    padding: 0!important;
-    margin: 2.5%!important;
-    margin-left: auto!important;
-    margin-right: auto!important;
+    border: 2.5px solid rgba(237, 122, 33, 1);
+    width: 80%;
+    margin-top: 0!important;
+    margin-bottom: 0!important;
 }
+.hr-small{
+    border: 2.5px solid rgba(237, 122, 33, 1);
+    width: 50%;
+}
+
 .header-div {
     color: white;
     background-color: rgba(24, 37, 46, 0.75);
@@ -76,6 +80,15 @@ body {
 }
 .thumbnail-title {
     color: white;
+}
+.turquoise {
+    color: #2baf97;
+}
+.orange {
+    color: #ed7a21;
+}
+.bold {
+    font-weight: bold;
 }
 /*Fin General*/
 
@@ -161,6 +174,10 @@ body {
         display:block !important;
     }
 }
+.navbar-nav > li > a {
+    font-family: 'Circula-Medium', sans-serif!important;
+}
+
 /*Fin Navbar */
 
 /*******Page Partenaire*******/
@@ -208,8 +225,8 @@ body {
     color: white;
 }
 .footer-sponsor {
-    width: 100px;
-    height: 100px;
+    max-width: 50px;
+    max-height: 50px;
     margin: 5%;
 }
 .footer-social {
@@ -223,29 +240,19 @@ body {
 /*Programmation*/
 
 .prog-filter {
-    /*background-color: rgba(141, 189, 69, 0.85); !* Fond vert clair *!*/
-    /*background-color: rgba(90, 195, 152, 0.85); !* Fond bleu cyan *!*/
     background-color: rgba(24, 37, 46, 0.75);
-    padding:10px;
 }
 .filter-title {
     color: #ffffff;
     position: relative;
     top:-3px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 .filter-btn {
     text-decoration: none;
     color: #ffffff;
-    font-size: 1.8em;
-    /*background-color: rgba(237, 122, 33, 1);        !* Fond orange *!*/
+    font-size: 1.5em;
     background-color: #18252e;
-    /* Fond Transparent */
-    /*background-color: rgba(90, 195, 152, 1);      !* Fond cyan *!*/
-    /*border: 3px solid rgba(237, 122, 33, 1);        !* Bordure orange *!*/
-    /*border: 1px solid rgba(90, 195, 152, 1);        /* Bordure cyan */
-    /*border-right: 3px solid rgba(90, 195, 152, 1);        !* Bordure cyan droite*!*/
-    /*border-left: 3px solid rgba(90, 195, 152, 1);       !* Bordure cyan gauche*!*/
     position: relative;
     top:5px;
     left:-15px;
@@ -253,38 +260,28 @@ body {
 
 }
 .filter-list {
-    background-color: rgba(90, 195, 152, 1);     /* Fond cyan */
+    background-color: #18252e;
     box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
-    color: rgba(237, 122, 33, 1);
+    color: #18252e;
 }
 .prog-artist {
-    border: none;
-    background-color: transparent;
+    height: 350px;
 }
-
-.prog-artist img {
-    /*border: 3px solid rgba(90, 195, 152, 1);*/
-    /*border: 3px solid rgba(237, 122, 33, 1);*/
-    /*box-shadow: -1px 2px 10px 3px rgba(0, 0, 0, 0.3) inset;*/
+.prog-img {
     box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
 }
 .prog-info {
-    width:180px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    top: -20px;
-    box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);        /*Ombre autour du layout artiste*/
-    color: black;
-    font-size: 14px;
+    margin-top: 5%;
 }
 .info-text {
+    font-family: 'Circula-Medium', sans-serif;
+    font-size: 24px;
+    color: white;
     margin: 0!important;
     padding: 0!important;
 }
 .prog-filter a:hover {
-    color: rgba(90, 195, 152, 1);       /* Hover cyan */
-    /*color: rgba(237, 122, 33, 1);       !* Hover orange *!*/
+    color: #ed7a21!important;
 }
 
 @media all and (max-device-width: 570px) {
@@ -303,7 +300,7 @@ body {
     right:0;
     bottom:0;
     margin-top: 10%;
-    color: red;
+    color: #ed7a21;
 }
 .img-cancel {
     opacity: 0.25;
@@ -366,9 +363,11 @@ body {
 /*Artiste*/
 
 .social-logo{
-    height: 20px;
-    width: 20px;
+    font-size: 40px;
     margin: 3%;
+}
+.upper {
+    text-transform: capitalize;
 }
 
 /*Fin Artiste*/
