--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,14 +49,6 @@ body {
     border: 2.5px solid rgba(237, 122, 33, 1);
     width: 50%;
 }
-
-.header-div {
-    color: white;
-    background-color: rgba(24, 37, 46, 0.75);
-}
-.header-title {
-    font-size: 5vm;
-}
 .separator-titleDiv {
     background-color: rgba(24, 37, 46, 0.75);
     margin-top: 0;
@@ -148,6 +140,9 @@ body {
     background-color: transparent;
     color: #ed7a21!important;
 }
+.navbar-active {
+    color: #ed7a21!important;
+}
 
 @media (max-width: 1110px) {
     .navbar-header {
@@ -172,6 +167,15 @@ body {
     }
     .collapse.in{
         display:block !important;
+    }
+    .mobile-title {
+        font-family: 'Dokyo', sans-serif;
+        color: white!important;
+    }
+}
+@media (min-width: 1110px) {
+    .mobile-title {
+        display: none;
     }
 }
 .navbar-nav > li > a {
@@ -225,14 +229,17 @@ body {
     color: white;
 }
 .footer-sponsor {
-    max-width: 50px;
-    max-height: 50px;
-    margin: 5%;
+    background-color: white;
+    border-radius : 20px;
+    color: #004e57;
+    border: 2px solid #2baf97;
+    box-shadow: 3px 3px 0px #017553;
+    width: 100%;
+    height: 200px;
 }
 .footer-social {
     width: 50px;
     height: 50px;
-    margin: 5%;
 }
 
 /*Fin Footer*/
@@ -244,9 +251,7 @@ body {
 }
 .filter-title {
     color: #ffffff;
-    position: relative;
-    top:-3px;
-    font-size: 1.5em;
+    font-size: 1.75em;
 }
 .filter-btn {
     text-decoration: none;
@@ -365,6 +370,7 @@ body {
 .social-logo{
     font-size: 40px;
     margin: 3%;
+    color: white;
 }
 .upper {
     text-transform: capitalize;
