--- a/src/css/style.css
+++ b/src/css/style.css
@@ -214,17 +214,36 @@ body {
 /*******Fin Page Artiste*******/
 
 /*******Page Partenaire*******/
-.partenaire{
+.partenaire_title{
     text-align: center;
     margin-bottom: 7%;
 }
+.adami_sponsor{
+    position: relative;
+ /*   left: 15%;*/
+}
 .separator-green{
-    background-color: rgba(43, 175, 151, 1);
+    background-color: transparent;
     font-family: 'Circula-Medium', sans-serif;
     text-align: center;
     color: white;
+    margin: 5%;
+}
+.separator-partenaire{
+    border: 2.5px solid rgba(237, 122, 33, 1);
 }
 
+.partenaire_button{
+    position: relative;
+    top: 15%;
+    left: 47%;
+    margin-top: 15%;
+    margin-bottom: 15%;
+}
+.btn-lg{
+    background-color: rgba(43, 175, 151, 1);
+
+}
 
 /*Fin Navbar*/
 
