--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,6 +61,9 @@ body {
         color: white;
     }
 }
+.title {
+    color: white;
+}
 .separator-div {
     padding: 1%;
 }
@@ -82,10 +85,10 @@ body {
 }
 @media (max-width: 1110px) {
     .header {
-        margin-top: 10%;
-        color: white;
-        margin-bottom: 5%;
         display: none;
+    }
+    body {
+        padding-top: 100px;
     }
 }
 @media (min-width: 1110px) {
@@ -198,38 +201,38 @@ body {
 /*Fin Navbar */
 
 /*******Page Partenaire*******/
-.partenaire_title{
-    text-align: center;
-    margin-bottom: 7%;
-}
-.adami_sponsor{
-    position: relative;
- /*   left: 15%;*/
-}
-.separator-green{
-    background-color: transparent;
-    font-family: 'Circula-Medium', sans-serif;
-    text-align: center;
-    color: white;
-    margin: 5%;
-}
-.separator-partenaire{
-    border: 2.5px solid rgba(237, 122, 33, 1);
-}
 
 .partnair-btn{
     background-color: rgba(43, 175, 151, 1);
     border: none;
 }
-.footer-partenaire{
-    background-color: white;
-    border-radius : 20px;
-    color: #004e57;
-    border: 2px solid #2baf97;
-    box-shadow: 3px 3px 0px #017553;
-    width: 80%;
-    height: 150px;
-    margin: 5%;
+@media (max-width: 1110px) {
+    .partnair-logo {
+        background-color: white;
+        border-radius : 20px;
+        color: #004e57;
+        border: 2px solid #2baf97;
+        box-shadow: 2px 2px 0px #017553;
+        width: 100%;
+        height: 75px;
+    }
+    #partnair-ecole {
+        margin-top: 30%;
+    }
+}
+@media (min-width: 1110px) {
+    .partnair-logo {
+        background-color: white;
+        border-radius : 20px;
+        color: #004e57;
+        border: 2px solid #2baf97;
+        box-shadow: 3px 3px 0px #017553;
+        width: 100%;
+        height: 200px;
+    }
+    #partnair-ecole {
+        margin-top: 17.5%;
+    }
 }
 
 /*Fin Navbar*/
@@ -267,14 +270,33 @@ body {
 .footer-legal {
     color: white;
 }
-.footer-sponsor {
-    background-color: white;
-    border-radius : 20px;
-    color: #004e57;
-    border: 2px solid #2baf97;
-    box-shadow: 3px 3px 0px #017553;
-    width: 100%;
-    height: 200px;
+@media (max-width: 1110px) {
+    .footer-sponsor {
+        background-color: white;
+        border-radius : 20px;
+        color: #004e57;
+        border: 2px solid #2baf97;
+        box-shadow: 2px 2px 0px #017553;
+        width: 100%;
+        height: 75px;
+    }
+    #ecole-logo {
+        margin-top: 30%;
+    }
+}
+@media (min-width: 1110px) {
+    .footer-sponsor {
+        background-color: white;
+        border-radius : 20px;
+        color: #004e57;
+        border: 2px solid #2baf97;
+        box-shadow: 3px 3px 0px #017553;
+        width: 100%;
+        height: 200px;
+    }
+    #ecole-logo {
+        margin-top: 17.5%;
+    }
 }
 .footer-social {
     width: 50px;
@@ -427,3 +449,11 @@ body {
 }
 
 /*Fin Benevolat*/
+
+/*Lieux*/
+
+.lieux-thumbnail {
+    height: 200px;
+}
+
+/*Fin Lieux*/
