--- a/views/food.html.twig
+++ b/views/food.html.twig
@@ -1,8 +1,6 @@
 <div class="container">
     <div class="row">
-        <?php
-        for($i=0;$i<3;$i++){
-            ?>
+        {% for i in range(0,3) %}
             <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                 <div class="content-div text-justify">
                     <img src="../src/img/chuck.png" class="img-responsive">
@@ -12,8 +10,6 @@
                 </div>
                 <br />
             </div>
-            <?php
-        }
-        ?>
+        {% endfor %}
     </div>
 </div>
