--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -8,25 +8,15 @@
         <h1 class="separator-title font-dokyo">PROGRAMMATION</h1>
         <hr class="hr">
         <div class="separator-div text-justify">
-            <?php
-            $max = 30;
-            $max1 = 29;
-            for($i=0;$i<$max;$i++){
-                if($i%2==0&&$i!=$max1){
-                    ?>
+            {%  for i in range(0,30) %}
+                {% if i%2 == 0 and i<29 %}
                     <p class="home-prog"><a href="../index.php?page=artiste" class="home-link link-orange font-circula">Chuck Berry</a> <span class="orange">/</span></p>
-                    <?php
-                }else if($i!=$max1){
-                    ?>
+                {% elseif i%2 != 0 and i<29 %}
                     <p class="home-prog"><a href="../index.php?page=artiste" class="home-link link-turquoise font-circula">Chuck Berry</a> <span class="turquoise">/</span></p>
-                    <?php
-                }else{
-                    ?>
+                {% else %}
                     <p class="home-prog"><a href="../index.php?page=artiste" class="home-link link-turquoise font-circula">Chuck Berry</a></p>
-                    <?php
-                }
-            }
-            ?>
+                {% endif %}
+            {% endfor %}
         </div>
         <h1 class="separator-title font-dokyo">BILLETTERIE</h1>
         <hr class="hr">
@@ -39,9 +29,7 @@
         <div class="separator-div">
             <div class="container-fluid">
                 <div class="row">
-                    <?php
-                    for($i=0;$i<3;$i++){
-                        ?>
+                    {%  for i in range(0,3) %}
                         <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                             <div class="content-div text-justify">
                                 <img src="../src/img/chuck.png" class="img-responsive">
@@ -51,9 +39,7 @@
                             </div>
                             <br />
                         </div>
-                        <?php
-                    }
-                    ?>
+                    {% endfor %}
                 </div>
             </div>
         </div>
