--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Hop Pop Hop</title>
+    <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap -->
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -66,3 +66,68 @@
         </div>
     </div>
 </nav>
+{% block content %}
+{% endblock %}
+<footer class="footer">
+    <div class="footer-top">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-3 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/adami.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/cnv.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/creditmut.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/loiret.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/orleans.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-md-3 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/region.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-md-3 col-md-offset-0 col-xs-4  col-xs-offset-2">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/sacem.png" class="img-responsive">
+                    </a>
+                </div>
+                <div class="col-md-3 col-md-offset-0 col-xs-4">
+                    <a href="#" class="thumbnail thumbnail-div footer-sponsor">
+                        <img src="../src/img/sponsors/ecole.png" class="img-responsive" id="ecole-logo">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom text-center visible-xs">
+        <i class="fa fa-facebook-square social-logo" aria-hidden="true"></i>
+        <i class="fa fa-twitter-square social-logo" aria-hidden="true"></i>
+        <i class="fa fa-instagram social-logo" aria-hidden="true"></i>
+        <i class="fa fa-spotify social-logo" aria-hidden="true"></i>
+        <i class="fa fa-youtube-square social-logo" aria-hidden="true"></i>
+    </div>
+    <div class="footer-last text-center">
+        <p class="footer-legal">Mentions Légales</p>
+    </div>
+</footer>
+<script src="../src/js/jquery-3.1.1.min.js"></script>
+<script src="../src/bootstrap/js/bootstrap.min.js"></script>
+<script src="../src/js/script.js"></script>
+</body>
+</html>
