--- a/src/HPH/views/home.html.twig
+++ b/src/HPH/views/home.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Projet{% endblock %}
+{% block title %}Hop Pop Hop{% endblock %}
 {% block content %}
     {%  if breakingNews>0 %}
         <div class="news-top text-center font-default" id="breaking-news">
