--- a/src/HPH/views/base.html.twig
+++ b/src/HPH/views/base.html.twig
@@ -42,7 +42,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">La vie au festival <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
                         <li><a href="../index.php?page=food">Se restaurer</a></li>
-                        <li><a href="../index.php?page=lieux">Lieux</a></li>
+                        <li><a href="../index.php?page=place">Lieux</a></li>
                     </ul>
                 </li>
                 <li>
