--- a/src/Hph/View/food.html.twig
+++ b/src/Hph/View/food.html.twig
@@ -1,5 +1,6 @@
 {% extends "base.html.twig" %}
-{% block title %}Hop Pop Hop{% endblock %}
+{% block title %}Se Nourrir{% endblock %}
+{% block titleMobile %}FoodTruck{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
