--- a/src/Hph/View/home.html.twig
+++ b/src/Hph/View/home.html.twig
@@ -2,16 +2,14 @@
 {% block title %}Hop Pop Hop{% endblock %}
 {% block titleMobile %}{% endblock %}
 {% block content %}
-    {%  if breakingNews>0 %}
-        <div class="news-top text-center font-default" id="breaking-news">
-            <h2 class="news-topText">
-                Attention, information de dernière minute : La Jungle ne pourra pas être présent.
-                <a class="cross glyphicon glyphicon-remove news-remove" onclick="$('#breaking-news').addClass('delete')"></a>
-            </h2>
-        </div>
-    {% endif %}
     <div class="container text-center">
         <div class="row">
+            {%  if breakingNews>0 %}
+                <div class="alert alert-warning alert-danger" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Attention !</strong> La Jungle est déprogrammé
+                </div>
+            {% endif %}
             <div class="col-xs-6 col-xs-offset-3">
                 <img src="../../../web/img/logo-only.png" alt="Logo du Festival" class="img-responsive logo-big">
                 <br />
