--- a/src/Hph/View/place.html.twig
+++ b/src/Hph/View/place.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
+{% #placeLink.addClass('active') %}
 {% block title %}Lieux{% endblock %}
+{% block titleMobile %}Lieux{% endblock %}
 {% block content %}
     <div class="container text-center">
         <div class="row">
