--- a/src/Hph/View/benevolat.html.twig
+++ b/src/Hph/View/benevolat.html.twig
@@ -1,4 +1,5 @@
-
+{% extends "base.html.twig" %}
+{% block content %}
 <div class="container">
     <div class="row">
         <div class="benevolat-div">
@@ -32,3 +33,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
