--- a/src/Hph/View/partner.html.twig
+++ b/src/Hph/View/partner.html.twig
@@ -1,45 +1,47 @@
+{% extends "base.html.twig" %}
+{% block content %}
 <div class="container">
     <div class="row text-center">
         <h1 class="title font-circula">PARTENAIRES OFFICIELS</h1>
         <hr class="hr">
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/adami.png" class="img-responsive">
+                <img src="public/img/sponsors/adami.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/creditmut.png" class="img-responsive">
+                <img src="public/img/sponsors/creditmut.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/sacem.png" class="img-responsive">
+                <img src="public/img/sponsors/sacem.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/cnv.png" class="img-responsive">
+                <img src="public/img/sponsors/cnv.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/loiret.png" class="img-responsive">
+                <img src="public/img/sponsors/loiret.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/orleans.png" class="img-responsive">
+                <img src="public/img/sponsors/orleans.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/region.png" class="img-responsive">
+                <img src="public/img/sponsors/region.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/ecole.png" class="img-responsive" id="partnair-ecole">
+                <img src="public/img/sponsors/ecole.png" class="img-responsive" id="partnair-ecole">
             </a>
         </div>
     </div>
@@ -48,42 +50,42 @@
         <hr class="hr">
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/adami.png" class="img-responsive">
+                <img src="public/img/sponsors/adami.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/creditmut.png" class="img-responsive">
+                <img src="public/img/sponsors/creditmut.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/sacem.png" class="img-responsive">
+                <img src="public/img/sponsors/sacem.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/cnv.png" class="img-responsive">
+                <img src="public/img/sponsors/cnv.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/loiret.png" class="img-responsive">
+                <img src="public/img/sponsors/loiret.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/orleans.png" class="img-responsive">
+                <img src="public/img/sponsors/orleans.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/region.png" class="img-responsive">
+                <img src="public/img/sponsors/region.png" class="img-responsive">
             </a>
         </div>
         <div class="col-md-3 col-xs-4">
             <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="../src/img/sponsors/ecole.png" class="img-responsive" id="partnair-ecole">
+                <img src="public/img/sponsors/ecole.png" class="img-responsive" id="partnair-ecole">
             </a>
         </div>
     </div>
@@ -94,3 +96,4 @@
     <a href="../index.php?page=contact"><button class="btn btn-primary partnair-btn">Devenez Partenaire</button></a>
 </div>
 </div>
+{% endblock %}
