--- a/src/Hph/View/programmation.html.twig
+++ b/src/Hph/View/programmation.html.twig
@@ -1,3 +1,6 @@
+{% extends "base.html.twig" %}
+{% block title %}PROGRAMMATION{% endblock %}
+{% block content %}
 <div class="text-center">
     <div class="dropdown prog-dropdown">
         <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-places" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Lieux <span class="caret"></span></button>
@@ -33,7 +36,7 @@
         <div class="col-md-3 col-sm-6">
             <a href="index.php?page=artiste">
                 <div class="thumbnail thumbnail-div prog-artist text-center">
-                    <img src="../src/img/chuck.png" class="prog-img img-cancel">
+                    <img src="public/img/chuck.png" class="prog-img img-cancel">
                     <div class="content-div prog-info text-center">
                         <p class="info-text">CHUCK BERRY CHUCK BERRY CHUCK BERRY</p>
                         <hr class="hr-min">
@@ -43,14 +46,13 @@
                 </div>
             </a>
         </div>
-        <?php
-        $total = 15;
-        for ($i=0;$i<$total;$i++){
-            ?>
+
+        {%for i in range(0,18) %}
+
             <div class="col-md-3 col-sm-6">
                 <a href="index.php?page=artiste">
                     <div class="thumbnail thumbnail-div prog-artist">
-                        <img src="../src/img/chuck.png" class="img-responsive prog-img">
+                        <img src="public/img/chuck.png" class="img-responsive prog-img">
                         <div class="content-div prog-info text-center">
                             <p class="info-text">CHUCK BERRY</p>
                             <hr class="hr-min">
@@ -59,8 +61,10 @@
                     </div>
                 </a>
             </div>
+        {% endfor %}
             <?php
         }
         ?>
     </div>
 </div>
+{% endblock %}
