--- a/src/Hph/View/contact.html.twig
+++ b/src/Hph/View/contact.html.twig
@@ -1,3 +1,6 @@
+{% extends "base.html.twig" %}
+{% block content %}
+
 <div class="container contact-content">
     <div class="col-md-offset-3 col-md-6">
         <div class="form-area text-center">
@@ -18,3 +21,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
