--- a/src/Hph/View/home.html.twig
+++ b/src/Hph/View/home.html.twig
@@ -4,13 +4,13 @@
 {% block content %}
     <div class="container text-center">
         <div class="row">
-            {%  if breakingNews>0 %}
+            {%  for news in newsBreaking %}
                 <div class="alert alert-warning alert-danger" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <strong>Attention !</strong><br />
-                    <p>La Jungle est déprogrammé</p>
+                    <strong>{{ news.title }}</strong><br />
+                    <p>{{ news.text }}</p>
                 </div>
-            {% endif %}
+            {% endfor %}
             <div class="col-xs-6 col-xs-offset-3">
                 <img src="../../../web/img/logo-only.png" alt="Logo du Festival" class="img-responsive logo-big">
                 <br />
@@ -40,13 +40,14 @@
             <div class="separator-div">
                 <div class="container-fluid">
                     <div class="row">
-                        {%  for i in range(0,2) %}
+                        {%  for news in newsAll %}
                             <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                                 <div class="content-div text-justify">
-                                    <img src="../../../web/img/chuck.png" class="img-responsive">
-                                    <h2 class="font-circula">{{ title }}</h2>
+                                    <img src="../../../web/img/{{ news.image }}" class="img-responsive">
+                                    <h2 class="font-circula">{{ news.title }}</h2>
                                     <hr class="hr">
-                                    <p>{{ text }}</p>
+                                    <p>{{ news.text }}</p>
+                                    <a href="http://{{ news.link }}">Plus</a>
                                 </div>
                                 <br />
                             </div>
