--- a/src/Hph/View/home.html.twig
+++ b/src/Hph/View/home.html.twig
@@ -24,8 +24,10 @@
                         <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-orange font-circula">Chuck Berry</a> <span class="orange">/</span></p>
                     {% elseif loop.index%2 != 0 and loop.index<artists|length %}
                         <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-turquoise font-circula">Chuck Berry</a> <span class="turquoise">/</span></p>
-                    {% else %}
+                    {% elseif loop.index%2 != 0 %}
                         <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-turquoise font-circula">Chuck Berry</a></p>
+                    {% else %}
+                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-orange font-circula">Chuck Berry</a></p>
                     {% endif %}
                 {% endfor %}
             </div>
