--- a/src/Hph/View/planning.html.twig
+++ b/src/Hph/View/planning.html.twig
@@ -50,8 +50,7 @@
                                 <h3 class="planning-locationSmall font-dokyo">LIEU</h3>
                                 {% for o in range(0,3) %}
                                     <p class="planning-showSmall font-circula">
-                                        <span class="turquoise font-circula bold">18h-19h : </span><br/> concert très long, mais
-                                        vraiment, il est trèeeeeeeees long
+                                        <span class="turquoise font-circula bold">18h-19h : </span><br/> concert très long, mais vraiment, il est trèeeeeeeees long
                                     </p>
                                     <br/>
                                 {% endfor %}
