--- a/src/Hph/View/home.html.twig
+++ b/src/Hph/View/home.html.twig
@@ -21,13 +21,13 @@
             <div class="separator-div text-justify home-progDiv">
                 {%  for artist in artists  %}
                     {% if loop.index%2 == 0 and loop.index<artists|length %}
-                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-orange font-circula">Chuck Berry</a> <span class="orange">/</span></p>
+                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-orange font-circula">{{ artist.name }}</a> <span class="orange">/</span></p>
                     {% elseif loop.index%2 != 0 and loop.index<artists|length %}
-                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-turquoise font-circula">Chuck Berry</a> <span class="turquoise">/</span></p>
+                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-turquoise font-circula">{{ artist.name }}</a> <span class="turquoise">/</span></p>
                     {% elseif loop.index%2 != 0 %}
-                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-turquoise font-circula">Chuck Berry</a></p>
+                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-turquoise font-circula">{{ artist.name }}</a></p>
                     {% else %}
-                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-orange font-circula">Chuck Berry</a></p>
+                        <p class="home-prog"><a href="../../../index.php?page=artiste" class="home-link link-orange font-circula">{{ artist.name }}</a></p>
                     {% endif %}
                 {% endfor %}
             </div>
