--- a/src/Hph/View/partner.html.twig
+++ b/src/Hph/View/partner.html.twig
@@ -4,92 +4,13 @@
 {% block content %}
 <div class="container">
     <div class="row text-center">
-        <h1 class="title font-circula">PARTENAIRES OFFICIELS</h1>
-        <hr class="hr">
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/adami.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/creditmut.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/sacem.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/cnv.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/loiret.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/orleans.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/region.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/ecole.png" class="img-responsive" id="partnair-ecole">
-            </a>
-        </div>
-    </div>
-    <div class="row text-center">
-        <h1 class="title font-circula">PARTENAIRES CULTURELS</h1>
-        <hr class="hr">
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/adami.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/creditmut.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/sacem.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/cnv.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/loiret.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/orleans.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/region.png" class="img-responsive">
-            </a>
-        </div>
-        <div class="col-md-3 col-xs-4">
-            <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                <img src="public/img/sponsors/ecole.png" class="img-responsive" id="partnair-ecole">
-            </a>
-        </div>
+        {%  for partner in partners %}
+            <div class="col-md-3 col-xs-4">
+                <a href="#" class="thumbnail thumbnail-div partnair-logo">
+                    <img src="../../../web/img/sponsors/{{ partner.imgPartner }}" class="img-responsive">
+                </a>
+            </div>
+        {% endfor %}
     </div>
 </div>
 <br />
