--- a/src/Hph/View/base.html.twig
+++ b/src/Hph/View/base.html.twig
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
     <div class="container-fluid">
         <div class="navbar-header text-center">
-            <a href="../../../index.php"><img src="../../../web/img/logo-min.png" class="navbar-brand"></a>
+            <a href="../../../index.php"><img src="../../../web/img/global/logo-min.png" class="navbar-brand"></a>
             <button type="button" class="navbar-toggle collapsed navbar-burger" data-toggle="collapse" data-target="#navbar-collapsed" aria-expanded="false">
                 <span class="sr-only">Menu</span>
                 <span class="icon-bar"></span>
@@ -75,42 +75,42 @@
             <div class="row text-center">
                 <div class="col-md-3 col-xs-4">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/adami.png" class="img-responsive">
+                        <img src="../../../web/img/partner/adami.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-4">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/cnv.png" class="img-responsive">
+                        <img src="../../../web/img/partner/cnv.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-4">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/creditmut.png" class="img-responsive">
+                        <img src="../../../web/img/partner/creditmut.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-4">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/loiret.png" class="img-responsive">
+                        <img src="../../../web/img/partner/loiret.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-4">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/orleans.png" class="img-responsive">
+                        <img src="../../../web/img/partner/orleans.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-xs-4">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/region.png" class="img-responsive">
+                        <img src="../../../web/img/partner/region.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-md-offset-0 col-xs-4  col-xs-offset-2">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/sacem.png" class="img-responsive">
+                        <img src="../../../web/img/partner/sacem.png" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-md-3 col-md-offset-0 col-xs-4">
                     <a href="#" class="thumbnail thumbnail-div footer-sponsor">
-                        <img src="../../../web/img/sponsors/ecole.png" class="img-responsive" id="ecole-logo">
+                        <img src="../../../web/img/partner/ecole.png" class="img-responsive" id="ecole-logo">
                     </a>
                 </div>
             </div>
