--- a/src/Hph/View/news.html.twig
+++ b/src/Hph/View/news.html.twig
@@ -7,7 +7,7 @@
             {%  for news in newsAll %}
                 <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                     <div class="content-div text-justify">
-                        <img src="../../../web/img/{{ news.image }}" class="img-responsive">
+                        <img src="../../../web/img/news/{{ news.imgNews }}" class="img-responsive">
                         <a href="index.php?page=newsOne&id={{ news.id }}" class="news-link"><h2 class="font-circula">{{ news.title }}</h2></a>
                         <hr class="hr">
                         <p>{{ news.text }}</p>
