--- a/src/Hph/View/newsOne.html.twig
+++ b/src/Hph/View/newsOne.html.twig
@@ -7,7 +7,7 @@
             {%  for news in newsOne %}
                 <div class="col-xs-12 col-xs-offset-0 col-sm-4 col-sm-offset-4">
                     <div class="content-div text-justify">
-                        <img src="../../../web/img/{{ news.image }}" class="img-responsive">
+                        <img src="../../../web/img/news/{{ news.imgNews }}" class="img-responsive">
                         <h2 class="font-circula">{{ news.title }}</h2>
                         <hr class="hr">
                         <p>{{ news.text }}</p>
