changement de path pour img page programmation

--- a/src/Hph/View/programmation.html.twig
+++ b/src/Hph/View/programmation.html.twig
@@ -41,7 +41,7 @@
             <div class="col-md-3 col-sm-6">
                 <a href="index.php?page=artiste">
                     <div class="thumbnail thumbnail-div prog-artist text-center">
-                        <img src="../../../web/img/{{ artiste.imagePath }}" class="img-responsive prog-img img-cancel">
+                        <img src="../../../web/img/artist/{{ artiste.imgArtist }}" class="img-responsive prog-img img-cancel">
                         <div class="content-div prog-info text-center">
                             <p class="info-text">{{ artiste.name }}</p>
                             <hr class="hr-min">
