--- a/src/Hph/View/artist.html.twig
+++ b/src/Hph/View/artist.html.twig
@@ -14,7 +14,7 @@
 
 
                 <div class="artiste-tag upper">
-                    <h3 class="font-circula">France <span class="turquoise">/</span> Rouquins <span class="orange">/</span> Six-Cordes</h3>
+                    <h3 class="font-circula">{{artist.tag.name }} <span class="turquoise">/</span> Rouquins <span class="orange">/</span> Six-Cordes</h3>
                 </div>
                 <hr class="hr">
                 <div class="artiste-social text-center">
