--- a/src/Hph/View/artist.html.twig
+++ b/src/Hph/View/artist.html.twig
@@ -6,7 +6,6 @@
 <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 <script> AOS.init(); </script>
 <div class="container hidden-xs">
-    {% for artist in artists %}
     <div class="row">
         <div class="col-xs-8">
             <div class="content-div">
@@ -14,12 +13,23 @@
 
                 <p>{{ artist.bio }}</p>
 
-
                 <div class="artiste-tag upper">
-                    <h3 class="font-circula">{{artist.tag.name }} <span class="turquoise">/</span> Rouquins <span class="orange">/</span> Six-Cordes</h3>
-                </div>
-                <hr class="hr">
+                    {% for tag in tags %}
 
+                        {% if loop.index%2 == 0 and loop.index<tags|length %}
+                          <div class="font-circula tag_artist"> {{ tag.name }} <span class="orange">/</span></div>
+                        {% elseif loop.index%2 != 0 and loop.index<tags|length %}                                                                    <div class="font-circula tag_artist"> {{ tag.name }} <span class="turquoise">/</span></div>
+                        {% elseif loop.index%2 != 0 %}
+                          <div class="font-circula tag_artist"> {{ tag.name }}</div>
+                        {% else %}
+                          <div class="font-circula tag_artist"> {{ tag.name }}</div>
+
+
+
+                        {% endif %}
+                    {% endfor %}
+                </div><br>
+                <hr class="hr">
 
 
             </div>
@@ -34,8 +44,8 @@
                 <div class="text-center">
                     <h2 class="font-circula">Vendredi 16 Septembre</h2>
                     <hr class="hr-small">
-                    <h3 class="font-circula">Jardin de l'évêché</h3>
-                    <h4 class="font-circula">21H35 <span class="turquoise bold">|</span> 22H35</h4>
+                    <h3 class="font-circula"> {{ place.name }} </h3>
+                    <h4 class="font-circula">{{ concert.concert_start | date("d / m / Y") }} <span class="turquoise bold">|</span> {{ concert.concertEnd }}</h4>
                 </div>
 
 
@@ -50,14 +60,13 @@
             </div>
         </div>
     </div>
-    {% endfor %}
 </div>
 <div class="visible-xs container">
     <div class="col-xs-12">
         <div class="content-div">
-            <img src="../public/img/chuck.png" class="img-responsive">
-            <h1 class="font-circula">La Jungle</h1>
-            <p>Une six-cordes et un casio. Il n’en faut parfois pas plus pour faire péter le mercure et irriter les yeux de sueur après deux breaks et trois accords. Deux singes rouquins, un très grand et un plus petit, vous emmènent dans leur milieu naturel : La Jungle !</p>
+            <img src="../web/img/artist/{{ artist.imgArtist }}" class="img-responsive">
+            <h1 class="font-circula">{{ artist.name }}</h1>
+          <p>{{ artist.bio }}</p>
             <div class="artiste-tag">
                 <h4 class="font-circula">France <span class="turquoise">/</span> Rouquins <span class="orange">/</span> Six-Cordes</h4>
             </div>
@@ -69,13 +78,13 @@
             </div>
             <hr class="hr">
             <div class="artiste-social text-center">
-                <i class="fa fa-facebook-square social-logo" aria-hidden="true"></i>
-                <i class="fa fa-twitter-square social-logo" aria-hidden="true"></i>
-                <i class="fa fa-instagram social-logo" aria-hidden="true"></i>
-                <i class="fa fa-spotify social-logo" aria-hidden="true"></i>
-                <i class="fa fa-youtube-square social-logo" aria-hidden="true"></i>
+                <a href="{{ artist.facebookUrl }}"><i class="fa fa-facebook-square social-logo" aria-hidden="true"></i></a>
+                <a href="{{ artist.twitterUrl }}"><i class="fa fa-twitter-square social-logo" aria-hidden="true"></i></a>
+
+                <a href="#"><i class="fa fa-spotify social-logo" aria-hidden="true"></i></a>
+                <a href="{{ artist.youtubeUrl }}"><i class="fa fa-youtube-square social-logo" aria-hidden="true"></i></a>
             </div>
-            <iframe width="100%" height="200" src="https://www.youtube.com/embed/wHylQRVN2Qs" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="200" src="{{ artist.videoUrl }}" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </div>
