--- a/src/Hph/View/partner.html.twig
+++ b/src/Hph/View/partner.html.twig
@@ -7,7 +7,7 @@
         {%  for partner in partners %}
             <div class="col-md-3 col-xs-4">
                 <a href="#" class="thumbnail thumbnail-div partnair-logo">
-                    <img src="../../../web/img/sponsors/{{ partner.imgPartner }}" class="img-responsive">
+                    <img src="../../../web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
                 </a>
             </div>
         {% endfor %}
