CRUD complet, ou presque

--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -33,6 +33,7 @@
                 <li><a href="../../../../admin/admin.php?page=news">Gestion des actualités</a></li>
                 <li><a href="../../../../admin/admin.php?page=food">Gestion des foodtrucks</a></li>
                 <li><a href="../../../../admin/admin.php?page=partner">Gestion des partenaires</a></li>
+                <li><a href="../../../../admin/admin.php?page=sunday">Gestion des activités</a></li>
             </ul>
         </div>
     </div>
