--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -3,8 +3,6 @@
 {% block content %}
     <div class="container">
         <h2 class="text-center">Ajouter un lieu</h2>
-
-        {{ error }}
         <form method="POST" action="../../../../admin/admin.php?page=addPlace" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="name">Nom du lieux</label>
@@ -78,7 +76,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="myModalLabel">Modifier un lieux</h4>
+                                <h4 class="modal-title">Modifier un lieux</h4>
                             </div>
                             <form method="POST" action="../../../../admin/admin.php?page=updatePlace" enctype="multipart/form-data">
                                 <div class="modal-body">
@@ -112,10 +110,10 @@
                                             {% endif %}
                                         </label>
                                     </div>
-                                    <div class="modal-footer">
-                                        <input type="hidden" name="id" value="{{ place.id }}">
-                                        <input type="submit" name="submit" class="btn btn-primary" value="Modifier">
-                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <input type="hidden" name="id" value="{{ place.id }}">
+                                    <input type="submit" name="submit" class="btn btn-primary" value="Modifier">
                                 </div>
                             </form>
                         </div>
@@ -126,7 +124,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="myModalLabel">Supprimer un lieu</h4>
+                                <h4 class="modal-title">Supprimer un lieu</h4>
                             </div>
                             <div class="modal-body">
                                 Êtes-vous sûr de vouloir supprimer le lieu {{ place.name }} ?
@@ -134,7 +132,7 @@
                             <div class="modal-footer">
                                 <form method="POST" action="../../../../admin/admin.php?page=deletePlace">
                                     <input type="hidden" name="id" value="{{ place.id }}">
-                                    <input type="submit" name="placeSubmit" class="btn btn-danger" value="Oui">
+                                    <input type="submit" name="submit" class="btn btn-danger" value="Oui">
                                 </form>
                                 <button class="btn btn-default" data-dismiss="modal">Non</button>
                             </div>
