--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -12,9 +12,10 @@
     <link href="../../../../web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../../../web/css/admin.css" rel="stylesheet">
     <link href="../../../../web/img/global/logo-min.png" rel="icon">
+
 </head>
 <body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header text-center">
             <a href="../../../../admin/admin.php"><img src="../../../../web/img/global/logo-min.png" class="navbar-brand"></a>
