--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../../../web/font-awesome/css/font-awesome.min.css">
     <link href="../../../../web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../../../web/css/style.css" rel="stylesheet">
-    <link href="../../../web/img/logo-min.png" rel="icon">
+    <link href="../../../../web/img/global/logo-min.png" rel="icon">
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
