--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="container">
         <h2 class="text-center">Ajouter un lieu</h2>
+        <hr/>
         <form method="POST" action="../../../../admin/admin.php?page=addPlace" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="name">Nom du lieux</label>
@@ -14,7 +15,7 @@
             </div>
             <div class="form-group">
                 <label for="start">Heure d'ouverture du lieu : 2017-09-15 17:41:58</label>
-                <input type="datetime" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start">
+                <input type="text" class="form-control" placeholder="Format : YYYY-MM-DD HH:MM:SS" id="start" name="start">
             </div>
             <div class="form-group">
                 <label for="start">Heure de fermeture du lieu : 2017-09-17 08:01:06</label>
