--- a/src/Hph/View/front/contact.html.twig
+++ b/src/Hph/View/front/contact.html.twig
@@ -5,20 +5,29 @@
 
 <div class="container contact-content">
     <div class="col-md-offset-3 col-md-6">
-        <div class="form-area text-center">
-            <form role="form">
+        <div class="form-area">
+            <form method="POST" action="../../../../index.php?page=mail">
                 <br/>
-                <h2 class="orange font-circula">Nous contacter</h2>
+                <h2 class="orange font-circula text-center">Nous contacter</h2>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Votre nom" required>
+                    <label for="name" class="white">Votre nom</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Entrez votre nom" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="email" name="email" placeholder="Votre e-mail" required>
+                    <label for="name" class="white">Votre e-mail</label>
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Entrez votre e-mail" required>
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" id="subject" name="subject" placeholder="Votre texte" rows="7" required></textarea>
+                    <label for="name" class="white">Le sujet de votre e-mail</label>
+                    <input type="text" class="form-control" id="subject" name="subject" placeholder="Entrez le sujet de votre e-mail" required>
                 </div>
-                <button type="button" id="submit" name="submit" class="btn btn-default contact-btn">Envoyer votre message</button>
+                <div class="form-group">
+                    <label for="name" class="white">Votre message</label>
+                    <textarea class="form-control" id="text" name="text" placeholder="Entrez le texte de votre message" rows="10" required></textarea>
+                </div>
+                <div class="text-center">
+                    <input type="submit" id="submit" name="submit" class="btn btn-default contact-btn" value="Envoyez votre message">
+                </div>
             </form>
         </div>
     </div>
